--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     iain.hunter@outlook.com</p>
 
 
-                <p class="footer-text">&copy Iain Hunter 2019</p>
+                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland</p>
 
                 <!-- Programming Modal -->
                 <div class="modal fade" id="programmingModal" tabindex="-1" role="dialog"
