Add margins on small screen

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </h2>
                 <div class="row mx-lg-3">
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-5">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/hot-home.png"
                                  style="width: 100%" alt="">
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-5">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/maptrunk-home.png"
                                  style="width: 100%; " alt="">
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-3">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/euro-open-data.png"
                                  style="width: 100%" alt="">
@@ -75,7 +75,7 @@
                     <span class="icons-headers"><i class="python-icon fab fa-python fa-sm"></i></span>Skills
                 </h2>
                 <div class="row mx-lg-4">
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-5">
                         <div class="card mx-auto" style="width: 100%;">
                             <img class="card-img-top" src="assets/images/programming.png" style="width: 100%"
                                  alt="Card image cap">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-5">
                         <div class="card mx-auto" style="width: 100%;">
                             <img class="card-img-top" src="assets/images/Datacenter5.jpg" style="width: 100%"
                                  alt="Card image cap">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-5">
                         <div class="card mx-auto" style="width: 100%;">
                             <img class="card-img-top" src="assets/images/aws.jpg" style="width: 100%"
                                  alt="Card image cap">
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mb-5">
                         <div class="card mx-auto" style="width: 100%;">
                             <img class="card-img-top" src="assets/images/data.png" style="width: 100%"
                                  alt="Card image cap">
@@ -134,8 +134,7 @@
                     <span class="icons-headers"><i class="fas fa-paper-plane fa-sm"></i></span> Certifications
                 </h2>
                 <p class="white-text">In the course of my career I have achieved the following certs. AWS Certfied
-                    associated,
-                    Scrum Alliance Certified Scrum Master, and Oracle Certified Associate</p>
+                    Developer, Scrum Alliance Certified Scrum Master, and Oracle Certified Associate</p>
                 <div class="row ">
                     <img class="img-responsive mx-auto d-block" src="assets/images/cert-dev.png"
                          alt="AWS Certified Developer">
