--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Iain Hunter</title>
+    <meta name="Description" content="Iain Hunter a programmer in Stirling, Scotland with 20+ years experience specialising in web apps
+    and distributed systems.  Prgams in Python, Flask, Angular.  Open to remote work">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Iain Hunter</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -40,7 +42,7 @@
                 </h2>
                 <div class="row mx-lg-3">
 
-                    <div class="col-md-4 mb-5">
+                    <div class="col-md-4 mb-5 mb-sm-0">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/hot-home.png"
                                  style="width: 100%" alt="">
@@ -50,7 +52,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-5">
+                    <div class="col-md-4 mb-5 mb-sm-0">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/maptrunk-home.png"
                                  style="width: 100%; " alt="">
@@ -60,7 +62,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-3">
+                    <div class="col-md-4 mb-3 mb-sm-0">
                         <div class="hovereffect">
                             <img class="img-responsive mx-auto d-block" src="assets/images/euro-open-data.png"
                                  style="width: 100%" alt="">
@@ -165,7 +167,7 @@
                     iain.hunter@outlook.com</p>
 
 
-                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland</p>
+                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland  <a style="background-color:black; margin-left:45rem; color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@donaldedgar?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Donald Edgar"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Donald Edgar</span></a></p>
 
                 <!-- Programming Modal -->
                 <div class="modal fade" id="programmingModal" tabindex="-1" role="dialog"
