fix broken markup

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     iain.hunter@outlook.com</p>
 
 
-                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland  </p>
+                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland.  <a style="color: white; margin-left: 2rem;" href="https://unsplash.com/@donaldedgar?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge">Background: Donald Edgar</a> </p>
 
                 <!-- Programming Modal -->
                 <div class="modal fade" id="programmingModal" tabindex="-1" role="dialog"
