Work on favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Iain Hunter</title>
     <meta name="Description" content="Iain Hunter a programmer in Stirling, Scotland with 20+ years experience specialising in web apps
-    and distributed systems.  Prgams in Python, Flask, Angular.  Open to remote work">
+    and distributed systems on AWS.  Programs in Python, Flask, Angular.  Open to remote work">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
           integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/iain.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
 </head>
 <body>
 <div class="container-fluid h-100">
@@ -133,7 +134,7 @@
 
                 <!-- Certs -->
                 <h2 class="content-padding-top text-center content-padding-bottom">
-                    <span class="icons-headers"><i class="fas fa-paper-plane fa-sm"></i></span> Certifications
+                    <span class="icons-headers"><i class="fas fa-trophy fa-sm"></i></span> Certifications
                 </h2>
                 <p class="white-text">In the course of my career I have achieved the following certs. AWS Certfied
                     Developer, Scrum Alliance Certified Scrum Master, and Oracle Certified Associate</p>
