Minor style tweak

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                 </div>
                 <h5 class="content-padding-top text-center">Lead developer with 20 years experience in software design,
                     development, delivery and leadership</h5>
+
+                <i class="fas fa-project-diagram"></i>
+
                 <h2 class="content-padding-top text-center content-padding-bottom">
-                    <span class="icons-headers"><i class="python-icon fab fa-python fa-sm"></i></span>Recent Projects
+                    <span class="icons-headers"><i class="fas fa-project-diagram fa-sm"></i></span>Recent Projects
                 </h2>
                 <div class="row mx-lg-3">
 
@@ -168,7 +171,7 @@
                     iain.hunter@outlook.com</p>
 
 
-                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland.  <a style="color: white; margin-left: 2rem;" href="https://unsplash.com/@donaldedgar?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge">Background: Donald Edgar</a> </p>
+                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland.  <a style="color: white; margin-left: 2rem;" target="_blank" href="https://unsplash.com/@donaldedgar?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge">Background: Donald Edgar</a> </p>
 
                 <!-- Programming Modal -->
                 <div class="modal fade" id="programmingModal" tabindex="-1" role="dialog"
