--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139344814-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-139344814-1');
+    </script>
+
     <title>Iain Hunter</title>
     <meta name="Description" content="Iain Hunter a programmer in Stirling, Scotland with 20+ years experience specialising in web apps
     and distributed systems on AWS.  Programs in Python, Flask, Angular.  Open to remote work">
@@ -171,7 +185,10 @@
                     iain.hunter@outlook.com</p>
 
 
-                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland.  <a style="color: white; margin-left: 2rem;" target="_blank" href="https://unsplash.com/@donaldedgar?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge">Background: Donald Edgar</a> </p>
+                <p class="footer-text">&copy Iain Hunter 2019, Stirling, Scotland. <a
+                        style="color: white; margin-left: 2rem;" target="_blank"
+                        href="https://unsplash.com/@donaldedgar?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge">Background:
+                    Donald Edgar</a></p>
 
                 <!-- Programming Modal -->
                 <div class="modal fade" id="programmingModal" tabindex="-1" role="dialog"
